# p4mlir-incubator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
build_tools/: build_mlir.sh  build_p4c_with_p4mlir_ext.sh  build_p4mlir.sh  ubuntu_install_mlir_requirements.sh
include/: CMakeLists.txt
include/p4mlir/Dialect/: CMakeLists.txt
include/p4mlir/Transforms/: CMakeLists.txt  Passes.h  Passes.td
lib/Dialect/P4HIR/: CMakeLists.txt  P4HIR.cpp  P4HIR_Attrs.cpp  P4HIR_Ops.cpp  P4HIR_TypeInterfaces.cpp  P4HIR_Types.cpp
lib/Transforms/: CMakeLists.txt  PrintParsersGraph.cpp  SimplifyParsers.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  p4mlir-opt.mlir
test/Dialect/P4HIR/: action.mlir  alloca.mlir  annotations.mlir  apply.mlir  array.mlir  binop.mlir  binop_err.mlir  bits.mlir  bool.mlir  call.mlir  cmp.mlir  concat.mlir  control.mlir  enum.mlir  exit.mlir  extern.mlir  for.mlir  for_err.mlir  header.mlir  if.mlir  instantiate.mlir  loadstore.mlir  newtype.mlir  p4hir_syntax.mlir  package.mlir  parser.mlir  scope.mlir  shl_shr.mlir  slice.mlir  string.mlir  struct.mlir  switch.mlir  table.mlir  ternary.mlir  tuple.mlir  types.mlir  uninit.mlir  unop.mlir
test/Transforms/Folds/: array.mlir  binop.mlir  cast.mlir  shl_shr.mlir  struct.mlir  unary.mlir  variable.mlir
test/Transforms/Inline/: inline-action.mlir  inline-function.mlir
test/Transforms/Passes/: simplify-parsers.mlir
test/Translate/Control/: apply.p4  control.p4  inner_inst.p4  table.p4  table_basic.p4
test/Translate/Ops/: action.p4  annotations.p4  assign.p4  binop.p4  calls.p4  cmp.p4  concat.p4  constants.p4  dontcare.p4  enum.p4  error.p4  exit.p4  extern.p4  extern_func.p4  for.p4  function.p4  header.p4  header_union.p4  if.p4  logical.p4  newtype.p4  optional.p4  package.p4  pred.p4  scope.p4  serenum.p4  shl_shr.p4  slice.p4  string.p4  struct.p4  switch-action-run.p4  switch-expression.p4  tuple.p4  type_annotations.p4  (+3 more)
tools/: CMakeLists.txt
tools/p4mlir-opt/: CMakeLists.txt  p4mlir-opt.cpp
tools/p4mlir-translate/: CMakeLists.txt  main.cpp  options.cpp  options.h  translate.cpp  translate.h
(+25 files in other folders)
